fixed flickering on hover

--- a/_sass/_va.scss
+++ b/_sass/_va.scss
@@ -2319,13 +2319,12 @@ button.js-simple-tooltip {
   font-family: 'Courier New', 'Courier', serif;
   font-weight:bold;
   cursor: pointer;
-  display:block;
+  display:inline-block;
   padding: 0;
   border-radius: 1.75em;
   background: $color-gray-dark;
-  display: inline-block;
-  margin: .2em 0 0 .5em;
-  color: #fff;
+  margin: 0 0 0 .5em;
+  color: white;
   height: 1.75em;
   font-size: .8em;
   width: 1.75em;
@@ -2340,48 +2339,49 @@ button.js-simple-tooltip {
 }
 .simpletooltip {
   position: absolute;
-  z-index: 666;
+  z-index: 777;
   width: 11em;
-  border-radius: .2em;
+  border-radius: .3em;
   background: $color-gray-dark;
   color: $color-white;
   padding: .6em;
   text-align: left;
+  font-size: 1em;
+  font-weight: 300;
   line-height: 1.3;
 }
 .simpletooltip {
   right: auto;
   left: 100%;
-  margin-left: .5em;
+  margin-left: .8em;
 }
-.simpletooltip::before {
-  content: '';
-  speak: none;
-  position: absolute;
-  z-index: 666;
-  width: 10px;
-  height: 10px;
-}
-.simpletooltip::before{
-  top: .2em;
-  left: -10px;
-  margin-left: -10px;
-  border: 10px solid transparent;
+.simpletooltip:before {
+  border-bottom: 10px solid transparent;  /* left arrow slant */
+  border-top: 10px solid transparent; /* right arrow slant */
   border-right: 10px solid $color-gray-dark;
+  content:"";
+  font-size: 0;
+  position: absolute;
+  top: 3px;
+  left: 0px;
+  line-height: 0;
+  margin-left: -10px;
+  width:0;
+  height:0
 }
 @media (max-width: 40.063em) {
   .simpletooltip {
     top: 100%;
-    left: 50%;
+    left: 45%;
     right: 0;
     margin: 0;
     margin-top: .7em;
     margin-left: -5em;
   }
-  .simpletooltip::before {
+  .simpletooltip:before {
     top: -10px;
     right: auto;
-    left: 50%;
+    left: 45%;
     margin-left: -5px;
     margin-top: -10px;
     border: 10px solid transparent;
